// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background color is orange-400 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Orange Background link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-right fa-w-14 c1"
      color="#D73F09"
      data-icon="long-arrow-right"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Background is orange-400, and text is white 1`] = `
.c1 {
  color: #ffffff;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Orange Background with White text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-right fa-w-14 c1"
      color="#ffffff"
      data-icon="long-arrow-right"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Default options 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Default link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-right fa-w-14 c1"
      color="#D73F09"
      data-icon="long-arrow-right"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Highlighted text is orange 1`] = `
.c2 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

.c1 {
  padding: 0;
  font-weight: 600;
  font-size: 24px;
}

<div>
  <a
    class="c0 c1"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Highlighted external link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-external-link fa-w-16 c2"
      color="#D73F09"
      data-icon="external-link"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M440,256H424a8,8,0,0,0-8,8V464a16,16,0,0,1-16,16H48a16,16,0,0,1-16-16V112A16,16,0,0,1,48,96H248a8,8,0,0,0,8-8V72a8,8,0,0,0-8-8H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V264A8,8,0,0,0,440,256ZM500,0,364,.34a12,12,0,0,0-12,12v10a12,12,0,0,0,12,12L454,34l.7.71L131.51,357.86a12,12,0,0,0,0,17l5.66,5.66a12,12,0,0,0,17,0L477.29,57.34l.71.7-.34,90a12,12,0,0,0,12,12h10a12,12,0,0,0,12-12L512,12A12,12,0,0,0,500,0Z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`InternalLink background is orange-400 and text is white 1`] = `
.c1 {
  color: #ffffff;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #D73F09;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    bg="#D73F09"
    class="c0"
    fg="#ffffff"
    href="/https://oregonstate.edu"
  >
    Orange Background with White text
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-right fa-w-14 c1"
      color="#ffffff"
      data-icon="long-arrow-right"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`Test SimpleInternalLink props are passed down 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 0;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="/https://oregonstate.edu"
    padding="0"
  >
    Simple Internal Link Sample
  </a>
</div>
`;

exports[`Text color is pine-400 1`] = `
.c1 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #D73F09;
  background-color: transparent;
  display: inline-block;
  padding: 4px 8px;
  background-color: #4A773C;
  font-weight: 500;
  border-radius: 8px;
}

.c0:hover,
.c0:active,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 > svg {
  margin-left: 1.2rem;
}

<div>
  <a
    class="c0"
    href="https://oregonstate.edu"
    target="_blank"
  >
    Green Text link
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-right fa-w-14 c1"
      color="#D73F09"
      data-icon="long-arrow-right"
      data-prefix="fal"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;
